# OOP244-Final

./: CMakeLists.txt  CPTester.cpp  CovidPatient.cpp  CovidPatient.h  IOAble.cpp  IOAble.h  IOAbleTester.cpp  Menu.cpp  Menu.h  Patient.cpp  Patient.h  PreTriage.cpp  PreTriage.h  TPTester.cpp  Ticket.h  Time.cpp  Time.h  TriagePatient.cpp  TriagePatient.h  menuTester.cpp  ms1Tester.cpp  ms2Tester.cpp  ms4Tester.cpp  reflect.txt  student_output.txt  utils.cpp  utils.h
